objects/tffa__AssetTaxDetail__c.object
<CustomObject>
    <description>Captures the tax details of the asset. Covers all Tax refunds, credits, losses or rebates attributable to a taxable period
        beginning on or prior to the Closing Date and prepayments of Taxes made on or prior to the Closing Date.</description>
    <fields>
        <fullName>tffa__Amount__c</fullName>
        <description>Amount of the taxes paid</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Asset__c</fullName>
        <description>Reference to parent asset object</description>
        <label>Asset</label>
        <referenceTo>tffa__Asset__c</referenceTo>
        <relationshipLabel>Tax Details</relationshipLabel>
        <relationshipName>TaxDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Exemptions__c</fullName>
        <description>Exemptions in the tax if any</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exemptions</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SourceSystemId__c</fullName>
        <description>The source system id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this asset if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__TaxYear__c</fullName>
        <description>Year in which the tax was paid</description>
        <label>Tax year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asset Tax Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Tax Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Tax Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>